--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spendsentinel",
-  "version": "0.3.0",
+  "version": "0.6.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
@@ -10,7 +10,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "update-version": "node scripts/update-version.js",
+    "version:major": "npm version major && npm run update-version",
+    "version:minor": "npm version minor && npm run update-version", 
+    "version:patch": "npm version patch && npm run update-version",
+    "deploy:with-cleanup": "echo 'Setting cleanup flag...' && NEXT_PUBLIC_FORCE_CLEANUP=true npm run build",
+    "deploy:major": "npm run version:major && npm run build",
+    "deploy:minor": "npm run version:minor && npm run build",
+    "release": "npm run typecheck && npm run lint && npm run version:minor && npm run build"
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.6.1",
