--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "deploy:with-cleanup": "echo 'Setting cleanup flag...' && NEXT_PUBLIC_FORCE_CLEANUP=true npm run build",
     "deploy:major": "npm run version:major && npm run build",
     "deploy:minor": "npm run version:minor && npm run build",
-    "release": "npm run typecheck && npm run lint && npm run version:minor && npm run build",
+    "prerelease": "npm run typecheck && npm run lint && npm run build && npm run test:e2e:quick",
+    "release": "npm run prerelease && npm run version:minor && npm run build",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
