--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:quick": "playwright test tests/e2e/specs/critical-flows/quick-assessment.spec.ts",
     "test:e2e:report": "playwright show-report",
-    "test:e2e:install": "playwright install"
+    "test:e2e:install": "playwright install",
+    "i18n:check-unused": "node scripts/find-unused-translations.js"
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.6.1",
@@ -83,6 +84,7 @@
     "eslint": "9.28.0",
     "eslint-config-next": "15.3.3",
     "genkit-cli": "^1.9.0",
+    "glob": "^11.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
