--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "@genkit-ai/googleai": "^1.9.0",
     "@genkit-ai/next": "^1.9.0",
     "@hookform/resolvers": "^4.1.3",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -56,15 +59,18 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
     "genkit": "^1.9.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.475.0",
     "negotiator": "^1.0.0",
     "next": "15.2.3",
+    "next-mdx-remote": "^5.0.0",
     "patch-package": "^8.0.0",
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
