--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:headed": "playwright test --headed",
-    "test:e2e:quick": "playwright test tests/e2e/specs/critical-flows/*.spec.ts",
+    "test:e2e:quick": "playwright test tests/e2e/specs/critical-flows/complete-onboarding.spec.ts",
     "test:e2e:report": "playwright show-report",
     "test:e2e:install": "playwright install",
     "i18n:check-unused": "node scripts/find-unused-translations.js"
