--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.12.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "dev": "next dev --turbopack -p 9002 --experimental-https",
     "genkit": "genkit start npm run dev",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
@@ -57,24 +57,23 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "@types/mdx": "^2.0.13",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "firebase": "^11.8.1",
     "genkit": "^1.9.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.475.0",
     "negotiator": "^1.0.0",
-    "next": "15.2.3",
+    "next": "^15.5.6",
     "next-mdx-remote": "^5.0.0",
     "patch-package": "^8.0.0",
-    "react": "^19.1.0",
+    "react": "^19.2.0",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
