--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.12.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002 --experimental-https",
+    "dev": "next dev -p 9002 --experimental-https",
     "genkit": "genkit start npm run dev",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
@@ -32,11 +32,11 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.6.1",
     "@genkit-ai/googleai": "^1.21.0",
-    "@genkit-ai/next": "^1.21.0",
+    "@genkit-ai/next": "^1.22.0",
     "@hookform/resolvers": "^4.1.3",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.3.3",
+    "@next/mdx": "^16.0.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -68,7 +68,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.475.0",
     "negotiator": "^1.0.0",
-    "next": "^15.5.6",
+    "next": "^16.0.1",
     "next-mdx-remote": "^5.0.0",
     "patch-package": "^8.0.0",
     "react": "^19.2.0",
@@ -84,14 +84,19 @@
     "@playwright/test": "^1.49.1",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "eslint": "9.28.0",
-    "eslint-config-next": "15.3.3",
+    "eslint-config-next": "16.0.1",
     "genkit-cli": "^1.9.0",
     "glob": "^11.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@genkit-ai/next": {
+      "next": "$next"
+    }
   }
 }
